--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
     "app-plus" : {
         // "renderer": "native",
         "usingComponents" : true,
+		// "renderer": "native",
         /* 模块配置 */
         "modules" : {},
         /* 应用发布信息 */
