--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,19 @@
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
-	// 设置网络超时
-	"networkTimeout" : {
-		"uploadFile": 60000
-	},
+    // 设置网络超时
+    "networkTimeout" : {
+        "uploadFile" : 60000
+    },
     /* 5+App特有相关 */
     "app-plus" : {
         // "renderer": "native",
         "usingComponents" : true,
         // "renderer": "native",
         /* 模块配置 */
-        "modules" : {},
+        "modules" : {
+            "OAuth" : {}
+        },
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
