--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "login",
+    "name" : "11",
     "appid" : "__UNI__27F8F94",
     "description" : "登录模板",
     "versionName" : "1.0.0",
