--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "11",
-    "appid" : "__UNI__27F8F94",
+    "appid" : "__UNI__wxc3e14a97aca4bf99",
     "description" : "登录模板",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -16,7 +16,8 @@
         // "renderer": "native",
         /* 模块配置 */
         "modules" : {
-            "OAuth" : {}
+            "OAuth" : {},
+            "Payment" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -35,6 +36,7 @@
                     "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
                     "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+                    "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
@@ -50,7 +52,23 @@
             "ios" : {},
             /* SDK配置 */
             "sdkConfigs" : {
-                "oauth" : {}
+                "oauth" : {},
+                "payment" : {}
+            },
+            "splashscreen" : {
+                "android" : {
+                    "hdpi" : "/Users/mahang/Documents/logo.png",
+                    "xhdpi" : "/Users/mahang/Documents/logo.png",
+                    "xxhdpi" : "/Users/mahang/Documents/logo.png"
+                }
+            },
+            "icons" : {
+                "android" : {
+                    "hdpi" : "/Users/mahang/Documents/logo.png",
+                    "xhdpi" : "/Users/mahang/Documents/logo.png",
+                    "xxhdpi" : "/Users/mahang/Documents/logo.png",
+                    "xxxhdpi" : "/Users/mahang/Documents/logo.png"
+                }
             }
         },
         "softinput" : {
